@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD xfce4-4.5.92.ebuild 1447 RMD160 7f2f1b947c1669e9ceb206a91dae3dd3f0e6cfc6 SHA1 bb4b0910f0c6f54b9867050315b6ad3c1a15baa8 SHA256 ad15a8d4bdc65e9b1acd74e3c79e26bfbf35bb8f7e16e6bc5299dc3f5ceec4f1
-EBUILD xfce4-9999.ebuild 1519 RMD160 9079b5ac70eb7b6314de4ce79991aa8b6790f8ea SHA1 f9d566ad8dbf9cc3ac7da196b46867f98e3ff431 SHA256 1f63b1b5e83d683749adadbacf1e58d3b1c3f001dae8509df9f59f50eed00344
-MISC ChangeLog 778 RMD160 7ed37e3760723fe20e7cd5eeee81d3fde360966b SHA1 c7ad025cd30acda0a92137a175ad694649f4a9c8 SHA256 43a44523794caf3b9092d89de772338041632a9f8408bda2ceede52113e9d5b3
+EBUILD xfce4-4.5.92.ebuild 1492 RMD160 48659e57a95f3480728abd21036e4a622f140d66 SHA1 a5cab44600db1c09650c7dd020f0af63b5f41e90 SHA256 6264677a089906e4889353b40caf3552ed8b660316c4d5930b81916af3243b15
+EBUILD xfce4-9999.ebuild 1564 RMD160 1af63d33b9794d9f933a604b51bddb8b09e3a2e5 SHA1 10fb8e2e4cda0a87a2e35af0722b59aa587ca5c8 SHA256 b408db206a1099df1ccffe17c09741f7a91e663eaa103242769c10efb0c2da78
+MISC ChangeLog 972 RMD160 18c2534af318bffc450e1b75d3b70eaa759acaae SHA1 9dd67cf33254cfd83938f2d61d24a551c228c9fa SHA256 6f3d418ada54457dfeb0fe200b2853d669e9332b31b9c897e16c655e4ec00988
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkdtk4ACgkQKhnDs22gwa+ozACg1m67x/agsLdVUfo7zlVKlSS+
-0QAAoPuHDHetzH1w+4IKLrmksmGHCNpb
-=qtdp
+iEYEARECAAYFAkkzvksACgkQKhnDs22gwa8rhQCfSjJUnSHzpki+o1Y8mI4PtX+w
+PasAoLv2DllkCT+G81f4A3io28ZgurhC
+=STn0
 -----END PGP SIGNATURE-----
