@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Dec 2008; Christoph Mende <angelos@gentoo.org> xfce4-4.5.92.ebuild,
+  xfce4-9999.ebuild:
+  Moved xfce4-icon-theme dependency to USE=-minimal and added
+  hicolor-icon-theme for USE=minimal
+
 *xfce4-4.5.92 (14 Nov 2008)
 
   14 Nov 2008; Christoph Mende <angelos@gentoo.org> +xfce4-4.5.92.ebuild,
